--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Amirul Azri</title>
+  <style>
+    body { 
+      font-family: Arial, sans-serif; 
+      text-align: center; 
+      padding: 50px; 
+      background-color: #f5f5f5;
+    }
+    h1 { color: #333; }
+    p { color: #555; }
+    a { color: #0077cc; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
-  <h1>Welcome to AmirulAzri.com</h1>
-  <p>This site is hosted securely on Cloudflare Pages.</p>
+  <h1>Hello! I’m Amirul Azri</h1>
+  <p>Welcome to my personal website.</p>
+  <p>Check out my projects on <a href="https://github.com/YOUR-GITHUB-USERNAME" target="_blank">GitHub</a>.</p>
 </body>
 </html>
+
