--- a/index.html
+++ b/index.html
@@ -1,25 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Amirul Azri</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      text-align: center; 
-      padding: 50px; 
-      background-color: #f5f5f5;
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f2f5;
+      color: #333;
     }
-    h1 { color: #333; }
-    p { color: #555; }
-    a { color: #0077cc; text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    header {
+      background-color: #0077cc;
+      color: white;
+      padding: 50px 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    header p {
+      font-size: 1.2em;
+    }
+    section {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    h2 {
+      color: #0077cc;
+      margin-bottom: 10px;
+    }
+    p {
+      line-height: 1.6;
+    }
+    a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #e0e0e0;
+      margin-top: 50px;
+    }
   </style>
 </head>
 <body>
-  <h1>Hello! I’m Amirul Azri</h1>
-  <p>Welcome to my personal website.</p>
-  <p>Check out my projects on <a href="https://github.com/YOUR-GITHUB-USERNAME" target="_blank">GitHub</a>.</p>
+
+<header>
+  <h1>Amirul Azri</h1>
+  <p>Welcome to my personal website!</p>
+</header>
+
+<section>
+  <h2>About Me</h2>
+  <p>Hello! I’m Amirul Azri, a tech enthusiast exploring cloud, web development, and security. I love building practical projects and learning new skills every day.</p>
+</section>
+
+<section>
+  <h2>Projects</h2>
+  <p>Check out my work on <a href="https://github.com/YOUR-GITHUB-USERNAME" target="_blank">GitHub</a>. I have small web apps, cloud experiments, and fun projects to share.</p>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <p>You can reach me via email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+</section>
+
+<footer>
+  &copy; 2025 Amirul Azri. All rights reserved.
+</footer>
+
 </body>
 </html>
-
