--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <section>
   <h2>Projects</h2>
-  <p>Check out my work on <a href="https://github.com/YOUR-GITHUB-USERNAME" target="_blank">GitHub</a>. I have small web apps, cloud experiments, and fun projects to share.</p>
+  <p>Check out my work on <a href="https://github.com/amirulazriconsec" target="_blank">GitHub</a>. I have small web apps, cloud experiments, and fun projects to share.</p>
 </section>
 
 <section>
