--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <section>
   <h2>Contact</h2>
-  <p>You can reach me via email: <a href="mailto:your-email@example.com">admin@amirulazri.com</a></p>
+  <p>You can reach me via email: <a href="mailto:admin@amirulazri.com">admin@amirulazri.com</a></p>
 </section>
 
 <footer>
